# gkd_nav_2026

./: .gitignore  README.md  check_odometry.zsh  communication.zsh  connect_lidar.sh  launch.zsh  nav2_params_1.yaml  nav_commander.zsh  ui_real.py
.cache/clangd/index/: communicate.cpp.237C8B2A3EF24F75.idx  communicate.hpp.0B067193E2D75798.idx  consts.hpp.3D836E2C6E39E574.idx  nav_commander.cpp.25A9939B539CAF9A.idx  protocal.h.46F53819A192B3C6.idx
src/communication/: CMakeLists.txt  package.xml
src/communication/include/: communicate.hpp  consts.hpp  control.h  game_status.h  protocal.h  rotate_fix.h  socket_server.hpp
src/communication/src/: communicate.cpp  control.cpp  rotate_fix.cpp
src/goal_calibration/: CMakeLists.txt  package.xml
src/goal_calibration/src/: goal_calibrate.cpp
src/nav_commander/: CMakeLists.txt  package.xml
src/nav_commander/src/: nav_commander.cpp
src/pb2025_robot_description/: CMakeLists.txt  README.md  dependencies.repos  package.xml
src/pb2025_robot_description/env-hooks/: gazebo.dsv.in
src/pb2025_robot_description/launch/: robot_description_launch.py
src/pb2025_robot_description/params/: robot_description.yaml
src/pb2025_robot_description/resource/models/industrial_camera/: model.sdf  model.sdf.xmacro
src/pb2025_robot_description/resource/models/mid360/: model.sdf  model.sdf.xmacro
src/pb2025_robot_description/resource/xmacro/: gkd_autosentry_robot.sdf.xmacro  pb2025_infantry_robot.sdf.xmacro  pb2025_sentry_robot.sdf copy.xmacro  pb2025_sentry_robot.sdf.xmacro  simulation_robot.sdf  simulation_robot.sdf.xmacro
src/pb2025_robot_description/rviz/: visualize_robot.rviz
src/pb2025_sentry_nav/livox_ros_driver2/config/: MID360_config.json
src/pb2025_sentry_nav/pb2025_nav_bringup/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
src/pb2025_sentry_nav/pb2025_nav_bringup/config/: nav2_params.yaml
src/pb2025_sentry_nav/pb2025_nav_bringup/launch/: robot_state_publisher_launch.py
src/pb2025_sentry_nav/pb_omni_pid_pursuit_controller/: package.xml
src/pb2025_sentry_nav/pb_teleop_twist_joy/: CMakeLists.txt  README.md  package.xml
src/pb2025_sentry_nav/small_gicp_relocalization/launch/: small_gicp_relocalization_launch.py
src/pb2025_sentry_nav/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
src/rmoss_gazebo/: .gitignore  README.md
src/rmoss_gazebo/rmoss_gz_base/: CMakeLists.txt  package.xml
src/rmoss_gazebo/rmoss_gz_base/src/: chassis_controller.cpp  gimbal_controller.cpp  shooter_controller.cpp
src/rmoss_gazebo/rmoss_gz_bridge/: CMakeLists.txt
src/rmoss_gazebo/rmoss_gz_bridge/src/: pose_bridge_node.cpp  rfid_bridge_main.cpp  rfid_bridge_node.cpp
src/rmoss_gazebo/rmoss_gz_cam/: CMakeLists.txt  package.xml
src/rmoss_gazebo/rmoss_gz_cam/src/: gz_cam_node.cpp
src/rmoss_gazebo/tools/: dependency.repos
src/rmoss_interfaces/: CMakeLists.txt
src/rmoss_interfaces/msg/referee/: ExchangeAmmon.msg  RfidStatus.msg  (+1 more)
src/rmoss_interfaces/srv/: ExchangeAmmon.srv
src/rmu_gazebo_simulator/: .pre-commit-config.yaml  Dockerfile  README.md  dependencies.repos
src/rmu_gazebo_simulator/rmu_gazebo_simulator/: CMakeLists.txt  package.xml
src/rmu_gazebo_simulator/rmu_gazebo_simulator/config/: gz_world.yaml  ros_gz_bridge.yaml
src/rmu_gazebo_simulator/rmu_gazebo_simulator/launch/: bringup_sim.launch.py  gazebo.launch.py  referee_system.launch.py  rviz.launch.py  spawn_robots.launch.py
src/rmu_gazebo_simulator/rmu_gazebo_simulator/resource/ign/: gui.config
src/rmu_gazebo_simulator/rmu_gazebo_simulator/resource/models/rmul_2025/: model.config  model.sdf
src/rmu_gazebo_simulator/rmu_gazebo_simulator/resource/worlds/: empty_world.sdf  rmuc_2025_world.sdf  rmul_2025_world.sdf
src/rmu_gazebo_simulator/rmu_gazebo_simulator/rviz/: visualize.rviz
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/: killgazebo.sh
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/player_web/: main_no_vision.py  main_vision.py  ros_handler.py
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/player_web/static/css/: ._bootstrap.min.css  main.css  uikit-rtl.min.css  uikit.min.css
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/player_web/static/js/: control.js  listener.js  socket.io.js  uikit-icons.min.js  uikit.min.js  variables.js  web_socket_utils.js
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/player_web/templates/: index.html
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/referee_system/: referee_system_client.py  simple_competition_1v1.py
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/referee_web/: main.py
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/referee_web/static/css/: ._uikit-rtl.min.css  control_panel.css
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/referee_web/static/js/: web_socket_utils.js
src/rmu_gazebo_simulator/rmu_gazebo_simulator/scripts/referee_web/templates/: index.html
src/rmu_gazebo_simulator/scripts/: follow.sh  sim.sh
(+17 files in other folders)
